feat: Add dashboard templates and enhanced Energy Dashboard sync
Dashboard Changes:
- New generic card templates system (_card_templates.yaml)
- Complete sam-energy-dashboard.yaml redesign (9 views)
- 4 new templates: water_heater, oven, dryer, desktop
- 7 updated templates to v1.0.0
- Updated dashboards/README.md documentation
- Removed obsolete dashboards/ directory

Energy Dashboard Sync:
- Enhanced sync with configured sensor matching
- Global price synchronization from Energy Dashboard
- Fuzzy matching algorithm (4 strategies)
- Improved error handling and logging

Documentation:
- New ENERGY_DASHBOARD_SYNC.md technical guide
- New MODIFICATIONS_SESSION.md session summary
- Updated all templates with comprehensive features

--- a/dashboards/templates/nas.yaml
+++ b/dashboards/templates/nas.yaml
@@ -1,5 +1,5 @@
 # Smart Appliance Monitor - NAS Dashboard Template
-# Version: 0.3.0
+# Version: 1.0.0
 # Optimized for NAS with session-based activity tracking
 # Detects intensive activity (backups, transfers) as sessions
 
@@ -13,53 +13,41 @@ sections:
   # ============================================
   - type: grid
     cards:
-      - type: custom:mushroom-template-card
-        primary: {APPLIANCE_NAME}
-        secondary: |
-          {% set state = states('sensor.{APPLIANCE_ID}_state') %}
-          {% if state == 'running' %}
-            🔵 Intensive activity - {{ states('sensor.{APPLIANCE_ID}_session_duration') }} min
-          {% elif state == 'finished' %}
-            ✅ Activity complete
-          {% else %}
-            💤 Idle (standby)
-          {% endif %}
-        icon: mdi:nas
-        icon_color: |
-          {% set state = states('sensor.{APPLIANCE_ID}_state') %}
-          {% if state == 'running' %}
-            blue
-          {% elif state == 'finished' %}
-            green
-          {% else %}
-            grey
-          {% endif %}
-        badge_icon: |
-          {% if is_state('binary_sensor.{APPLIANCE_ID}_unplugged', 'on') %}
-            mdi:power-off
-          {% elif is_state('binary_sensor.{APPLIANCE_ID}_alert_duration', 'on') %}
-            mdi:alert
-          {% endif %}
-        badge_color: |
-          {% if is_state('binary_sensor.{APPLIANCE_ID}_unplugged', 'on') %}
-            red
-          {% elif is_state('binary_sensor.{APPLIANCE_ID}_alert_duration', 'on') %}
-            orange
-          {% endif %}
-        tap_action:
-          action: more-info
-          entity: sensor.{APPLIANCE_ID}_state
-        fill_container: true
+      # Custom Cycle Card (adapted for NAS sessions)
+      - type: custom:smart-appliance-cycle-card
+        entity: sensor.{APPLIANCE_ID}_state
+        name: "{APPLIANCE_NAME}"
+        icon: "mdi:nas"
+        show_power_graph: true
+        show_action_buttons: true
+        show_current_power: true
+        graph_hours: 1
+        theme: auto
 
   # ============================================
-  # SECTION 2: CURRENT ACTIVITY
+  # SECTION 2: STATISTICS
   # ============================================
-  - title: Current Activity
+  - title: Statistiques
+    type: grid
+    cards:
+      # Custom Stats Card
+      - type: custom:smart-appliance-stats-card
+        entity: sensor.{APPLIANCE_ID}_state
+        name: "Statistiques d'Activité"
+        default_tab: today
+        show_trends: true
+        show_efficiency: true
+        theme: auto
+
+  # ============================================
+  # SECTION 3: CURRENT ACTIVITY
+  # ============================================
+  - title: Activité en Cours
     type: grid
     cards:
       - type: gauge
         entity: sensor.{APPLIANCE_ID}_session_duration
-        name: Activity Duration
+        name: Durée Activité
         needle: true
         severity:
           green: 0
@@ -71,20 +59,20 @@ sections:
 
       - type: statistic
         entity: sensor.{APPLIANCE_ID}_session_energy
-        name: Energy (session)
+        name: Énergie (session)
         icon: mdi:lightning-bolt
         stat_type: mean
 
       - type: statistic
         entity: sensor.{APPLIANCE_ID}_session_cost
-        name: Cost (session)
+        name: Coût (session)
         icon: mdi:currency-eur
         stat_type: mean
 
   # ============================================
-  # SECTION 3: POWER MONITORING
+  # SECTION 4: POWER MONITORING
   # ============================================
-  - title: Power Monitoring
+  - title: Surveillance Puissance
     type: grid
     cards:
       - type: custom:mini-graph-card
@@ -92,7 +80,7 @@ sections:
           - entity: sensor.{APPLIANCE_ID}_power
             name: Puissance
             color: '#e74c3c'
-        name: Consumption (24h) - Backup/Transfer Detection
+        name: Consommation (24h) - Détection Backup/Transfer
         hours_to_show: 24
         points_per_hour: 4
         line_width: 2
@@ -113,11 +101,11 @@ sections:
             content: |
               {% set power = states('sensor.{APPLIANCE_ID}_power') | float(0) %}
               {% if power > 50 %}
-                Intensive activity
+                Activité intensive
               {% elif power > 20 %}
-                Moderate activity
+                Activité modérée
               {% else %}
-                Idle
+                Inactif
               {% endif %}
             icon: mdi:signal
             icon_color: |
@@ -131,48 +119,303 @@ sections:
               {% endif %}
 
   # ============================================
-  # SECTION 4: CONTROLS & MONITORING
+  # SECTION 5: CONTROLS & MONITORING
   # ============================================
-  - title: Controls
+  - title: Contrôles
     type: grid
     cards:
       - type: entities
         entities:
           - entity: switch.{APPLIANCE_ID}_monitoring
-            name: Activity Monitoring
+            name: Surveillance Activité
             icon: mdi:eye
           - entity: switch.{APPLIANCE_ID}_notifications
             name: Notifications
             icon: mdi:bell
+          - type: divider
           - type: section
-            label: Notifications par type
+            label: Types de Notifications
           - entity: switch.{APPLIANCE_ID}_notification_cycle_started
-            name: Intensive Activity Started
+            name: Activité Intensive Démarrée
             icon: mdi:backup-restore
           - entity: switch.{APPLIANCE_ID}_notification_cycle_finished
-            name: Activity Finished
+            name: Activité Terminée
             icon: mdi:check-circle
           - entity: switch.{APPLIANCE_ID}_notification_alert_duration
-            name: Long Activity
+            name: Activité Longue
             icon: mdi:clock-alert
           - entity: switch.{APPLIANCE_ID}_notification_unplugged
-            name: NAS Off/Unplugged ⚠️
+            name: NAS Hors-ligne ⚠️
             icon: mdi:server-off
+          - type: divider
           - type: section
             label: Actions
           - entity: button.{APPLIANCE_ID}_reset_stats
-            name: Reset Statistics
+            name: Réinitialiser Statistiques
             icon: mdi:restart
 
   # ============================================
-  # SECTION 5: STATISTICS & ANALYSIS
+  # SECTION 6: ENERGY MANAGEMENT
   # ============================================
-  - title: Statistics
+  - title: Gestion Énergétique
+    type: grid
+    cards:
+      - type: entities
+        title: Configuration
+        entities:
+          - entity: switch.{APPLIANCE_ID}_energy_limits
+            name: Limites Énergie
+            icon: mdi:speedometer
+          - entity: switch.{APPLIANCE_ID}_auto_shutdown
+            name: Arrêt Automatique
+            icon: mdi:power-plug-off
+
+      - type: horizontal-stack
+        cards:
+          - type: gauge
+            entity: sensor.{APPLIANCE_ID}_daily_energy
+            name: Énergie Jour
+            min: 0
+            max: 5
+            unit: kWh
+            needle: true
+            severity:
+              green: 0
+              yellow: 3
+              red: 4
+
+          - type: gauge
+            entity: sensor.{APPLIANCE_ID}_monthly_energy
+            name: Énergie Mois
+            min: 0
+            max: 100
+            unit: kWh
+            needle: true
+            severity:
+              green: 0
+              yellow: 60
+              red: 80
+
+      - type: entities
+        title: Alertes
+        entities:
+          - entity: binary_sensor.{APPLIANCE_ID}_energy_limit_exceeded
+            name: Limite Dépassée
+            icon: mdi:alert-circle
+          - entity: binary_sensor.{APPLIANCE_ID}_budget_exceeded
+            name: Budget Dépassé
+            icon: mdi:cash-remove
+
+  # ============================================
+  # SECTION 7: SCHEDULING
+  # ============================================
+  - title: Planification
+    type: grid
+    cards:
+      - type: entities
+        entities:
+          - entity: switch.{APPLIANCE_ID}_scheduling
+            name: Activer Planification
+            icon: mdi:calendar-clock
+
+      - type: custom:mushroom-template-card
+        primary: |
+          {% if is_state('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'on') %}
+            ✅ Usage Autorisé
+          {% else %}
+            ⛔ Usage Non Autorisé
+          {% endif %}
+        secondary: |
+          {% if is_state('switch.{APPLIANCE_ID}_scheduling', 'on') %}
+            Plage: {{ state_attr('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'allowed_start') | default('N/A', true) }} - {{ state_attr('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'allowed_end') | default('N/A', true) }}
+          {% else %}
+            Planification désactivée
+          {% endif %}
+        icon: |
+          {% if is_state('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'on') %}
+            mdi:check-circle
+          {% else %}
+            mdi:cancel
+          {% endif %}
+        icon_color: |
+          {% if is_state('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'on') %}
+            green
+          {% else %}
+            red
+          {% endif %}
+        tap_action:
+          action: more-info
+          entity: binary_sensor.{APPLIANCE_ID}_usage_allowed
+
+  # ============================================
+  # SECTION 8: AI ANALYSIS
+  # ============================================
+  - title: Analyse IA
+    type: grid
+    cards:
+      - type: horizontal-stack
+        cards:
+          - type: button
+            name: Pattern
+            icon: mdi:chart-timeline-variant
+            tap_action:
+              action: call-service
+              service: smart_appliance_monitor.analyze_cycles
+              service_data:
+                entity_id: sensor.{APPLIANCE_ID}_state
+                analysis_type: pattern
+                cycle_count: 10
+
+          - type: button
+            name: Recommendations
+            icon: mdi:lightbulb-on
+            tap_action:
+              action: call-service
+              service: smart_appliance_monitor.analyze_cycles
+              service_data:
+                entity_id: sensor.{APPLIANCE_ID}_state
+                analysis_type: recommendations
+                cycle_count: 10
+
+          - type: button
+            name: Complète
+            icon: mdi:chart-box
+            tap_action:
+              action: call-service
+              service: smart_appliance_monitor.analyze_cycles
+              service_data:
+                entity_id: sensor.{APPLIANCE_ID}_state
+                analysis_type: all
+                cycle_count: 10
+
+      - type: entities
+        title: État Analyse
+        entities:
+          - entity: switch.{APPLIANCE_ID}_ai_analysis
+            name: Activer Analyse IA
+          - entity: sensor.{APPLIANCE_ID}_ai_analysis
+            name: Dernière Analyse
+            secondary_info: last-changed
+
+      - type: markdown
+        content: >
+          **Résumé:** {{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'summary') | default('Aucune analyse disponible', true) }}
+          
+          
+          **Recommandations:**
+          
+          {{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'recommendations') | default('Aucune recommandation', true) }}
+
+      - type: horizontal-stack
+        cards:
+          - type: custom:mushroom-template-card
+            primary: Économies kWh
+            secondary: "{{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'energy_savings_kwh') | default('N/A', true) }}"
+            icon: mdi:lightning-bolt
+            icon_color: green
+
+          - type: custom:mushroom-template-card
+            primary: Économies €
+            secondary: "{{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'energy_savings_eur') | default('N/A', true) }} €"
+            icon: mdi:currency-eur
+            icon_color: green
+
+  # ============================================
+  # SECTION 9: ANOMALY DETECTION
+  # ============================================
+  - title: Détection d'Anomalies
+    type: grid
+    cards:
+      - type: gauge
+        entity: sensor.{APPLIANCE_ID}_anomaly_score
+        name: Score d'Anomalie
+        min: 0
+        max: 100
+        needle: true
+        severity:
+          green: 0
+          yellow: 30
+          red: 60
+
+      - type: entities
+        entities:
+          - entity: binary_sensor.{APPLIANCE_ID}_anomaly_detected
+            name: Anomalie Détectée
+            icon: mdi:alert-circle
+
+      - type: custom:mini-graph-card
+        entities:
+          - entity: sensor.{APPLIANCE_ID}_anomaly_score
+            name: Score
+            color: '#e74c3c'
+        name: Historique Anomalies (7j)
+        hours_to_show: 168
+        points_per_hour: 1
+        line_width: 2
+        show:
+          labels: true
+          points: false
+          legend: true
+        icon: mdi:chart-line-variant
+
+  # ============================================
+  # SECTION 10: ALERTS
+  # ============================================
+  - title: Alertes
+    type: grid
+    cards:
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.{APPLIANCE_ID}_unplugged
+            state: 'on'
+        card:
+          type: custom:mushroom-template-card
+          primary: 🚨 NAS HORS-LIGNE
+          secondary: Vérifier l'alimentation immédiatement
+          icon: mdi:server-off
+          icon_color: red
+          tap_action:
+            action: more-info
+            entity: binary_sensor.{APPLIANCE_ID}_unplugged
+
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.{APPLIANCE_ID}_alert_duration
+            state: 'on'
+        card:
+          type: custom:mushroom-template-card
+          primary: ⏰ Activité Intensive Prolongée
+          secondary: Backup ou transfert très long en cours
+          icon: mdi:clock-alert
+          icon_color: orange
+          tap_action:
+            action: more-info
+            entity: binary_sensor.{APPLIANCE_ID}_alert_duration
+
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.{APPLIANCE_ID}_anomaly_detected
+            state: 'on'
+        card:
+          type: custom:mushroom-template-card
+          primary: 🔍 Anomalie Détectée
+          secondary: |
+            Score: {{ states('sensor.{APPLIANCE_ID}_anomaly_score') }}
+          icon: mdi:alert-circle
+          icon_color: orange
+          tap_action:
+            action: more-info
+            entity: binary_sensor.{APPLIANCE_ID}_anomaly_detected
+
+  # ============================================
+  # SECTION 11: STATISTICS & ANALYSIS
+  # ============================================
+  - title: Statistiques
     type: grid
     cards:
       # Last Activity Session
       - type: entities
-        title: Last Intensive Session
+        title: Dernière Session Intensive
         icon: mdi:history
         entities:
           - entity: sensor.{APPLIANCE_ID}_last_session_duration
@@ -188,7 +431,7 @@ sections:
       # Daily Activity
       - type: custom:mushroom-entity-card
         entity: sensor.{APPLIANCE_ID}_daily_sessions
-        name: Intensive Sessions (day)
+        name: Sessions Intensives (jour)
         icon: mdi:counter
         icon_color: blue
         primary_info: state
@@ -197,35 +440,35 @@ sections:
       # Energy costs
       - type: custom:mushroom-entity-card
         entity: sensor.{APPLIANCE_ID}_daily_cost
-        name: Daily Cost
+        name: Coût du Jour
         icon: mdi:currency-eur
         icon_color: green
 
       - type: custom:mushroom-entity-card
         entity: sensor.{APPLIANCE_ID}_monthly_cost
-        name: Monthly Cost
+        name: Coût Mensuel
         icon: mdi:calendar-month
         icon_color: green
 
   # ============================================
-  # SECTION 6: HEALTH & UPTIME
+  # SECTION 12: HEALTH & UPTIME
   # ============================================
-  - title: Status & Availability
+  - title: État & Disponibilité
     type: grid
     cards:
       # Unplugged detector (critical for NAS)
       - type: custom:mushroom-template-card
         primary: |
           {% if is_state('binary_sensor.{APPLIANCE_ID}_unplugged', 'off') %}
-            ✅ NAS Online
+            ✅ NAS En Ligne
           {% else %}
-            ⚠️ NAS Offline
+            ⚠️ NAS Hors-ligne
           {% endif %}
         secondary: |
           {% if is_state('binary_sensor.{APPLIANCE_ID}_unplugged', 'on') %}
-            No power consumption detected
+            Aucune consommation détectée
           {% else %}
-            Powered and functional
+            Alimenté et fonctionnel
           {% endif %}
         icon: |
           {% if is_state('binary_sensor.{APPLIANCE_ID}_unplugged', 'off') %}
@@ -246,7 +489,7 @@ sections:
       # Current power consumption
       - type: custom:mushroom-entity-card
         entity: sensor.{APPLIANCE_ID}_power
-        name: Current Consumption
+        name: Consommation Actuelle
         icon: mdi:flash
         icon_color: |
           {% set power = states('sensor.{APPLIANCE_ID}_power') | float(0) %}
@@ -257,38 +500,4 @@ sections:
           {% else %}
             green
           {% endif %}
-
-  # ============================================
-  # SECTION 7: ALERTS
-  # ============================================
-  - title: Alerts
-    type: grid
-    cards:
-      - type: conditional
-        conditions:
-          - entity: binary_sensor.{APPLIANCE_ID}_unplugged
-            state: 'on'
-        card:
-          type: custom:mushroom-template-card
-          primary: 🚨 NAS OFFLINE
-          secondary: Check power immediately
-          icon: mdi:server-off
-          icon_color: red
-          tap_action:
-            action: more-info
-            entity: binary_sensor.{APPLIANCE_ID}_unplugged
-
-      - type: conditional
-        conditions:
-          - entity: binary_sensor.{APPLIANCE_ID}_alert_duration
-            state: 'on'
-        card:
-          type: custom:mushroom-template-card
-          primary: ⏰ Extended Intensive Activity
-          secondary: Very long backup or transfer in progress
-          icon: mdi:clock-alert
-          icon_color: orange
-          tap_action:
-            action: more-info
-            entity: binary_sensor.{APPLIANCE_ID}_alert_duration
 
