--- a/dashboards/templates/monitor.yaml
+++ b/dashboards/templates/monitor.yaml
@@ -1,5 +1,5 @@
 # Smart Appliance Monitor - Monitor/Screen Dashboard Template
-# Version: 0.3.0
+# Version: 1.0.0
 # Optimized for monitors with session-based tracking
 # Uses "session" terminology instead of "cycle"
 
@@ -13,53 +13,41 @@ sections:
   # ============================================
   - type: grid
     cards:
-      - type: custom:mushroom-template-card
-        primary: {APPLIANCE_NAME}
-        secondary: |
-          {% set state = states('sensor.{APPLIANCE_ID}_state') %}
-          {% if state == 'running' %}
-            🟢 Screen on - {{ states('sensor.{APPLIANCE_ID}_session_duration') }} min
-          {% elif state == 'finished' %}
-            ✅ Session complete
-          {% else %}
-            ⚫ Screen off
-          {% endif %}
-        icon: mdi:monitor
-        icon_color: |
-          {% set state = states('sensor.{APPLIANCE_ID}_state') %}
-          {% if state == 'running' %}
-            green
-          {% elif state == 'finished' %}
-            blue
-          {% else %}
-            grey
-          {% endif %}
-        badge_icon: |
-          {% if is_state('binary_sensor.{APPLIANCE_ID}_alert_duration', 'on') %}
-            mdi:clock-alert
-          {% elif is_state('binary_sensor.{APPLIANCE_ID}_unplugged', 'on') %}
-            mdi:power-plug-off
-          {% endif %}
-        badge_color: |
-          {% if is_state('binary_sensor.{APPLIANCE_ID}_alert_duration', 'on') %}
-            orange
-          {% elif is_state('binary_sensor.{APPLIANCE_ID}_unplugged', 'on') %}
-            red
-          {% endif %}
-        tap_action:
-          action: more-info
-          entity: sensor.{APPLIANCE_ID}_state
-        fill_container: true
+      # Custom Cycle Card (adapted for sessions)
+      - type: custom:smart-appliance-cycle-card
+        entity: sensor.{APPLIANCE_ID}_state
+        name: "{APPLIANCE_NAME}"
+        icon: "mdi:monitor"
+        show_power_graph: true
+        show_action_buttons: true
+        show_current_power: true
+        graph_hours: 1
+        theme: auto
 
   # ============================================
-  # SECTION 2: CURRENT SESSION
+  # SECTION 2: STATISTICS
   # ============================================
-  - title: Current Session
+  - title: Statistiques
+    type: grid
+    cards:
+      # Custom Stats Card
+      - type: custom:smart-appliance-stats-card
+        entity: sensor.{APPLIANCE_ID}_state
+        name: "Statistiques Détaillées"
+        default_tab: today
+        show_trends: true
+        show_efficiency: true
+        theme: auto
+
+  # ============================================
+  # SECTION 3: CURRENT SESSION
+  # ============================================
+  - title: Session en Cours
     type: grid
     cards:
       - type: gauge
         entity: sensor.{APPLIANCE_ID}_session_duration
-        name: Usage Duration
+        name: Durée Utilisation
         needle: true
         severity:
           green: 0
@@ -71,28 +59,28 @@ sections:
 
       - type: statistic
         entity: sensor.{APPLIANCE_ID}_session_energy
-        name: Session Energy
+        name: Énergie Session
         icon: mdi:lightning-bolt
         stat_type: mean
 
       - type: statistic
         entity: sensor.{APPLIANCE_ID}_session_cost
-        name: Session Cost
+        name: Coût Session
         icon: mdi:currency-eur
         stat_type: mean
 
   # ============================================
-  # SECTION 3: USAGE PATTERN
+  # SECTION 4: POWER CONSUMPTION
   # ============================================
-  - title: Usage
+  - title: Consommation
     type: grid
     cards:
       - type: custom:mini-graph-card
         entities:
           - entity: sensor.{APPLIANCE_ID}_power
-            name: Consommation
+            name: Puissance
             color: '#9b59b6'
-        name: Consommation (dernières 24h)
+        name: Consommation (24h)
         hours_to_show: 24
         points_per_hour: 4
         line_width: 2
@@ -104,18 +92,17 @@ sections:
           fill: fade
         icon: mdi:monitor-shimmer
 
-      # Session pattern indicator
-      - type: custom:mushroom-chips-card
-        chips:
-          - type: template
-            content: |
-              {% set sessions = states('sensor.{APPLIANCE_ID}_daily_sessions') | int %}
-              {{ sessions }} session{% if sessions > 1 %}s{% endif %} aujourd'hui
-            icon: mdi:counter
-            icon_color: purple
+      # Average consumption
+      - type: custom:mushroom-entity-card
+        entity: sensor.{APPLIANCE_ID}_last_session_energy
+        name: Consommation Moyenne
+        icon: mdi:lightning-bolt-circle
+        primary_info: name
+        secondary_info: state
+        icon_color: amber
 
   # ============================================
-  # SECTION 4: CONTROLS
+  # SECTION 5: CONTROLS
   # ============================================
   - title: Contrôles
     type: grid
@@ -123,78 +110,290 @@ sections:
       - type: entities
         entities:
           - entity: switch.{APPLIANCE_ID}_monitoring
-            name: Session Monitoring
+            name: Surveillance Sessions
             icon: mdi:eye
           - entity: switch.{APPLIANCE_ID}_notifications
             name: Notifications
             icon: mdi:bell
+          - type: divider
           - type: section
-            label: Notifications par type
+            label: Types de Notifications
           - entity: switch.{APPLIANCE_ID}_notification_cycle_started
-            name: Screen On
+            name: Écran Allumé
             icon: mdi:monitor-star
           - entity: switch.{APPLIANCE_ID}_notification_cycle_finished
-            name: Session Complete
+            name: Session Terminée
             icon: mdi:monitor-off
           - entity: switch.{APPLIANCE_ID}_notification_alert_duration
-            name: Long Session
+            name: Session Longue
             icon: mdi:clock-alert
           - entity: switch.{APPLIANCE_ID}_notification_unplugged
-            name: Screen Unplugged
+            name: Écran Débranché
             icon: mdi:power-plug-off
+          - type: divider
           - type: section
             label: Actions
           - entity: button.{APPLIANCE_ID}_reset_stats
-            name: Réinitialiser stats
+            name: Réinitialiser Stats
             icon: mdi:restart
 
   # ============================================
-  # SECTION 5: STATISTICS
+  # SECTION 6: ENERGY MANAGEMENT
   # ============================================
-  - title: Statistiques
+  - title: Gestion Énergétique
     type: grid
     cards:
-      # Last Session
       - type: entities
-        title: Last Session
-        icon: mdi:history
+        title: Configuration
         entities:
-          - entity: sensor.{APPLIANCE_ID}_last_session_duration
-            name: Durée
-            icon: mdi:timer
-          - entity: sensor.{APPLIANCE_ID}_last_session_energy
-            name: Énergie
+          - entity: switch.{APPLIANCE_ID}_energy_limits
+            name: Limites Énergie
+            icon: mdi:speedometer
+          - entity: switch.{APPLIANCE_ID}_auto_shutdown
+            name: Arrêt Automatique
+            icon: mdi:power-plug-off
+
+      - type: horizontal-stack
+        cards:
+          - type: gauge
+            entity: sensor.{APPLIANCE_ID}_daily_energy
+            name: Énergie Jour
+            min: 0
+            max: 2
+            unit: kWh
+            needle: true
+            severity:
+              green: 0
+              yellow: 1.2
+              red: 1.6
+
+          - type: gauge
+            entity: sensor.{APPLIANCE_ID}_monthly_energy
+            name: Énergie Mois
+            min: 0
+            max: 30
+            unit: kWh
+            needle: true
+            severity:
+              green: 0
+              yellow: 18
+              red: 24
+
+      - type: entities
+        title: Alertes
+        entities:
+          - entity: binary_sensor.{APPLIANCE_ID}_energy_limit_exceeded
+            name: Limite Dépassée
+            icon: mdi:alert-circle
+          - entity: binary_sensor.{APPLIANCE_ID}_budget_exceeded
+            name: Budget Dépassé
+            icon: mdi:cash-remove
+
+  # ============================================
+  # SECTION 7: SCHEDULING
+  # ============================================
+  - title: Planification
+    type: grid
+    cards:
+      - type: entities
+        entities:
+          - entity: switch.{APPLIANCE_ID}_scheduling
+            name: Activer Planification
+            icon: mdi:calendar-clock
+
+      - type: custom:mushroom-template-card
+        primary: |
+          {% if is_state('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'on') %}
+            ✅ Usage Autorisé
+          {% else %}
+            ⛔ Usage Non Autorisé
+          {% endif %}
+        secondary: |
+          {% if is_state('switch.{APPLIANCE_ID}_scheduling', 'on') %}
+            Plage: {{ state_attr('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'allowed_start') | default('N/A', true) }} - {{ state_attr('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'allowed_end') | default('N/A', true) }}
+          {% else %}
+            Planification désactivée
+          {% endif %}
+        icon: |
+          {% if is_state('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'on') %}
+            mdi:check-circle
+          {% else %}
+            mdi:cancel
+          {% endif %}
+        icon_color: |
+          {% if is_state('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'on') %}
+            green
+          {% else %}
+            red
+          {% endif %}
+        tap_action:
+          action: more-info
+          entity: binary_sensor.{APPLIANCE_ID}_usage_allowed
+
+  # ============================================
+  # SECTION 8: AI ANALYSIS
+  # ============================================
+  - title: Analyse IA
+    type: grid
+    cards:
+      - type: horizontal-stack
+        cards:
+          - type: button
+            name: Pattern
+            icon: mdi:chart-timeline-variant
+            tap_action:
+              action: call-service
+              service: smart_appliance_monitor.analyze_cycles
+              service_data:
+                entity_id: sensor.{APPLIANCE_ID}_state
+                analysis_type: pattern
+                cycle_count: 10
+
+          - type: button
+            name: Recommendations
+            icon: mdi:lightbulb-on
+            tap_action:
+              action: call-service
+              service: smart_appliance_monitor.analyze_cycles
+              service_data:
+                entity_id: sensor.{APPLIANCE_ID}_state
+                analysis_type: recommendations
+                cycle_count: 10
+
+          - type: button
+            name: Complète
+            icon: mdi:chart-box
+            tap_action:
+              action: call-service
+              service: smart_appliance_monitor.analyze_cycles
+              service_data:
+                entity_id: sensor.{APPLIANCE_ID}_state
+                analysis_type: all
+                cycle_count: 10
+
+      - type: entities
+        title: État Analyse
+        entities:
+          - entity: switch.{APPLIANCE_ID}_ai_analysis
+            name: Activer Analyse IA
+          - entity: sensor.{APPLIANCE_ID}_ai_analysis
+            name: Dernière Analyse
+            secondary_info: last-changed
+
+      - type: markdown
+        content: >
+          **Résumé:** {{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'summary') | default('Aucune analyse disponible', true) }}
+          
+          
+          **Recommandations:**
+          
+          {{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'recommendations') | default('Aucune recommandation', true) }}
+
+      - type: horizontal-stack
+        cards:
+          - type: custom:mushroom-template-card
+            primary: Économies kWh
+            secondary: "{{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'energy_savings_kwh') | default('N/A', true) }}"
             icon: mdi:lightning-bolt
-          - entity: sensor.{APPLIANCE_ID}_last_session_cost
-            name: Coût
+            icon_color: green
+
+          - type: custom:mushroom-template-card
+            primary: Économies €
+            secondary: "{{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'energy_savings_eur') | default('N/A', true) }} €"
             icon: mdi:currency-eur
-
-      # Daily Summary
-      - type: custom:mushroom-entity-card
-        entity: sensor.{APPLIANCE_ID}_daily_sessions
-        name: Sessions Today
-        icon: mdi:monitor-multiple
-        icon_color: purple
-        primary_info: state
-        secondary_info: name
-
-      # Costs
-      - type: custom:mushroom-entity-card
-        entity: sensor.{APPLIANCE_ID}_daily_cost
-        name: Daily Cost
-        icon: mdi:currency-eur
-        icon_color: green
-
-      - type: custom:mushroom-entity-card
-        entity: sensor.{APPLIANCE_ID}_monthly_cost
-        name: Monthly Cost
-        icon: mdi:calendar-month
-        icon_color: green
+            icon_color: green
 
   # ============================================
-  # SECTION 6: ENERGY EFFICIENCY
+  # SECTION 9: ANOMALY DETECTION
   # ============================================
-  - title: Energy Efficiency
+  - title: Détection d'Anomalies
+    type: grid
+    cards:
+      - type: gauge
+        entity: sensor.{APPLIANCE_ID}_anomaly_score
+        name: Score d'Anomalie
+        min: 0
+        max: 100
+        needle: true
+        severity:
+          green: 0
+          yellow: 30
+          red: 60
+
+      - type: entities
+        entities:
+          - entity: binary_sensor.{APPLIANCE_ID}_anomaly_detected
+            name: Anomalie Détectée
+            icon: mdi:alert-circle
+
+      - type: custom:mini-graph-card
+        entities:
+          - entity: sensor.{APPLIANCE_ID}_anomaly_score
+            name: Score
+            color: '#e74c3c'
+        name: Historique Anomalies (7j)
+        hours_to_show: 168
+        points_per_hour: 1
+        line_width: 2
+        show:
+          labels: true
+          points: false
+          legend: true
+        icon: mdi:chart-line-variant
+
+  # ============================================
+  # SECTION 10: ALERTS
+  # ============================================
+  - title: Alertes
+    type: grid
+    cards:
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.{APPLIANCE_ID}_alert_duration
+            state: 'on'
+        card:
+          type: custom:mushroom-template-card
+          primary: ⏰ Session Très Longue
+          secondary: L'écran est allumé depuis longtemps
+          icon: mdi:clock-alert
+          icon_color: orange
+          tap_action:
+            action: more-info
+            entity: binary_sensor.{APPLIANCE_ID}_alert_duration
+
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.{APPLIANCE_ID}_unplugged
+            state: 'on'
+        card:
+          type: custom:mushroom-template-card
+          primary: 🔌 Écran Débranché
+          secondary: Aucune consommation détectée
+          icon: mdi:power-plug-off
+          icon_color: red
+          tap_action:
+            action: more-info
+            entity: binary_sensor.{APPLIANCE_ID}_unplugged
+
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.{APPLIANCE_ID}_anomaly_detected
+            state: 'on'
+        card:
+          type: custom:mushroom-template-card
+          primary: 🔍 Anomalie Détectée
+          secondary: |
+            Score: {{ states('sensor.{APPLIANCE_ID}_anomaly_score') }}
+          icon: mdi:alert-circle
+          icon_color: orange
+          tap_action:
+            action: more-info
+            entity: binary_sensor.{APPLIANCE_ID}_anomaly_detected
+
+  # ============================================
+  # SECTION 11: ENERGY EFFICIENCY
+  # ============================================
+  - title: Efficacité Énergétique
     type: grid
     cards:
       - type: custom:mushroom-template-card
@@ -203,7 +402,7 @@ sections:
           {% set duration = states('sensor.{APPLIANCE_ID}_last_session_duration') | float(1) %}
           {% set avg_power = (energy * 1000 / duration * 60) | round(1) if duration > 0 else 0 %}
           {{ avg_power }} W
-        secondary: Average Power (last session)
+        secondary: Puissance Moyenne (dernière session)
         icon: mdi:gauge
         icon_color: |
           {% set energy = states('sensor.{APPLIANCE_ID}_last_session_energy') | float(0) %}
@@ -217,37 +416,12 @@ sections:
             red
           {% endif %}
 
-  # ============================================
-  # SECTION 7: ALERTS
-  # ============================================
-  - title: Alerts
-    type: grid
-    cards:
-      - type: conditional
-        conditions:
-          - entity: binary_sensor.{APPLIANCE_ID}_alert_duration
-            state: 'on'
-        card:
-          type: custom:mushroom-template-card
-          primary: ⏰ Very Long Session
-          secondary: Screen has been on for a long time
-          icon: mdi:clock-alert
-          icon_color: orange
-          tap_action:
-            action: more-info
-            entity: binary_sensor.{APPLIANCE_ID}_alert_duration
-
-      - type: conditional
-        conditions:
-          - entity: binary_sensor.{APPLIANCE_ID}_unplugged
-            state: 'on'
-        card:
-          type: custom:mushroom-template-card
-          primary: 🔌 Screen Unplugged
-          secondary: No power consumption detected
-          icon: mdi:power-plug-off
-          icon_color: red
-          tap_action:
-            action: more-info
-            entity: binary_sensor.{APPLIANCE_ID}_unplugged
+      - type: custom:mushroom-chips-card
+        chips:
+          - type: template
+            content: |
+              {% set sessions = states('sensor.{APPLIANCE_ID}_daily_sessions') | int %}
+              {{ sessions }} session{% if sessions > 1 %}s{% endif %} aujourd'hui
+            icon: mdi:counter
+            icon_color: purple
 
