--- a/dashboards/templates/printer_3d.yaml
+++ b/dashboards/templates/printer_3d.yaml
@@ -1,5 +1,5 @@
 # Smart Appliance Monitor - 3D Printer Dashboard Template
-# Version: 0.3.0
+# Version: 1.0.0
 # Optimized for 3D printers with very long print jobs (up to 24h+)
 
 title: {APPLIANCE_NAME}
@@ -12,50 +12,42 @@ sections:
   # ============================================
   - type: grid
     cards:
-      - type: custom:mushroom-template-card
-        primary: {APPLIANCE_NAME}
-        secondary: |
-          {% set state = states('sensor.{APPLIANCE_ID}_state') %}
-          {% if state == 'running' %}
-            🖨️ Print in progress - {{ states('sensor.{APPLIANCE_ID}_cycle_duration') }} min
-          {% elif state == 'finished' %}
-            ✅ Print complete!
-          {% else %}
-            ⚪ Ready to print
-          {% endif %}
-        icon: mdi:printer-3d
-        icon_color: |
-          {% set state = states('sensor.{APPLIANCE_ID}_state') %}
-          {% if state == 'running' %}
-            blue
-          {% elif state == 'finished' %}
-            green
-          {% else %}
-            grey
-          {% endif %}
-        badge_icon: |
-          {% if is_state('binary_sensor.{APPLIANCE_ID}_unplugged', 'on') %}
-            mdi:power-plug-off
-          {% endif %}
-        badge_color: |
-          {% if is_state('binary_sensor.{APPLIANCE_ID}_unplugged', 'on') %}
-            red
-          {% endif %}
-        tap_action:
-          action: more-info
-          entity: sensor.{APPLIANCE_ID}_state
-        fill_container: true
+      # Custom Cycle Card
+      - type: custom:smart-appliance-cycle-card
+        entity: sensor.{APPLIANCE_ID}_state
+        name: "{APPLIANCE_NAME}"
+        icon: "mdi:printer-3d"
+        show_power_graph: true
+        show_action_buttons: true
+        show_current_power: true
+        graph_hours: 2
+        theme: auto
 
   # ============================================
-  # SECTION 2: CURRENT PRINT JOB
+  # SECTION 2: STATISTICS
   # ============================================
-  - title: Current Print
+  - title: Statistiques
+    type: grid
+    cards:
+      # Custom Stats Card
+      - type: custom:smart-appliance-stats-card
+        entity: sensor.{APPLIANCE_ID}_state
+        name: "Statistiques d'Impression"
+        default_tab: today
+        show_trends: true
+        show_efficiency: true
+        theme: auto
+
+  # ============================================
+  # SECTION 3: CURRENT PRINT JOB
+  # ============================================
+  - title: Impression en Cours
     type: grid
     cards:
       # Duration with extended range for long prints
       - type: gauge
         entity: sensor.{APPLIANCE_ID}_cycle_duration
-        name: Print Duration
+        name: Durée Impression
         needle: true
         severity:
           green: 0
@@ -67,20 +59,20 @@ sections:
 
       - type: statistic
         entity: sensor.{APPLIANCE_ID}_cycle_energy
-        name: Energy Consumed
+        name: Énergie Consommée
         icon: mdi:lightning-bolt
         stat_type: mean
 
       - type: statistic
         entity: sensor.{APPLIANCE_ID}_cycle_cost
-        name: Print Cost
+        name: Coût Impression
         icon: mdi:currency-eur
         stat_type: mean
 
   # ============================================
-  # SECTION 3: PRINT MONITORING
+  # SECTION 4: PRINT MONITORING
   # ============================================
-  - title: Monitoring
+  - title: Surveillance Impression
     type: grid
     cards:
       - type: custom:mini-graph-card
@@ -88,7 +80,7 @@ sections:
           - entity: sensor.{APPLIANCE_ID}_power
             name: Puissance
             color: '#e67e22'
-        name: Consumption (last 24h)
+        name: Consommation (24h)
         hours_to_show: 24
         points_per_hour: 4
         line_width: 2
@@ -124,48 +116,307 @@ sections:
               {% endif %}
 
   # ============================================
-  # SECTION 4: CONTROLS
+  # SECTION 5: CONTROLS
   # ============================================
-  - title: Controls
+  - title: Contrôles
     type: grid
     cards:
       - type: entities
         entities:
           - entity: switch.{APPLIANCE_ID}_monitoring
-            name: Automatic Monitoring
+            name: Surveillance Automatique
             icon: mdi:eye
           - entity: switch.{APPLIANCE_ID}_notifications
             name: Notifications
             icon: mdi:bell
+          - type: divider
           - type: section
-            label: Notifications par type
+            label: Types de Notifications
           - entity: switch.{APPLIANCE_ID}_notification_cycle_started
-            name: Print Started
+            name: Impression Démarrée
             icon: mdi:printer-3d-nozzle
           - entity: switch.{APPLIANCE_ID}_notification_cycle_finished
-            name: Print Complete
+            name: Impression Terminée
             icon: mdi:check-circle
           - entity: switch.{APPLIANCE_ID}_notification_alert_duration
-            name: Very Long Print
+            name: Impression Très Longue
             icon: mdi:clock-alert
           - entity: switch.{APPLIANCE_ID}_notification_unplugged
-            name: Printer Off
+            name: Imprimante Éteinte
             icon: mdi:power-plug-off
+          - type: divider
           - type: section
             label: Actions
           - entity: button.{APPLIANCE_ID}_reset_stats
-            name: Reset Statistics
+            name: Réinitialiser Statistiques
             icon: mdi:restart
 
   # ============================================
-  # SECTION 5: PRINT STATISTICS
+  # SECTION 6: ENERGY MANAGEMENT
   # ============================================
-  - title: Print Statistics
+  - title: Gestion Énergétique
+    type: grid
+    cards:
+      - type: entities
+        title: Configuration
+        entities:
+          - entity: switch.{APPLIANCE_ID}_energy_limits
+            name: Limites Énergie
+            icon: mdi:speedometer
+          - entity: switch.{APPLIANCE_ID}_auto_shutdown
+            name: Arrêt Automatique
+            icon: mdi:power-plug-off
+
+      - type: horizontal-stack
+        cards:
+          - type: gauge
+            entity: sensor.{APPLIANCE_ID}_daily_energy
+            name: Énergie Jour
+            min: 0
+            max: 10
+            unit: kWh
+            needle: true
+            severity:
+              green: 0
+              yellow: 6
+              red: 8
+
+          - type: gauge
+            entity: sensor.{APPLIANCE_ID}_monthly_energy
+            name: Énergie Mois
+            min: 0
+            max: 100
+            unit: kWh
+            needle: true
+            severity:
+              green: 0
+              yellow: 60
+              red: 80
+
+      - type: entities
+        title: Alertes
+        entities:
+          - entity: binary_sensor.{APPLIANCE_ID}_energy_limit_exceeded
+            name: Limite Dépassée
+            icon: mdi:alert-circle
+          - entity: binary_sensor.{APPLIANCE_ID}_budget_exceeded
+            name: Budget Dépassé
+            icon: mdi:cash-remove
+
+  # ============================================
+  # SECTION 7: SCHEDULING
+  # ============================================
+  - title: Planification
+    type: grid
+    cards:
+      - type: entities
+        entities:
+          - entity: switch.{APPLIANCE_ID}_scheduling
+            name: Activer Planification
+            icon: mdi:calendar-clock
+
+      - type: custom:mushroom-template-card
+        primary: |
+          {% if is_state('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'on') %}
+            ✅ Usage Autorisé
+          {% else %}
+            ⛔ Usage Non Autorisé
+          {% endif %}
+        secondary: |
+          {% if is_state('switch.{APPLIANCE_ID}_scheduling', 'on') %}
+            Plage: {{ state_attr('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'allowed_start') | default('N/A', true) }} - {{ state_attr('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'allowed_end') | default('N/A', true) }}
+          {% else %}
+            Planification désactivée
+          {% endif %}
+        icon: |
+          {% if is_state('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'on') %}
+            mdi:check-circle
+          {% else %}
+            mdi:cancel
+          {% endif %}
+        icon_color: |
+          {% if is_state('binary_sensor.{APPLIANCE_ID}_usage_allowed', 'on') %}
+            green
+          {% else %}
+            red
+          {% endif %}
+        tap_action:
+          action: more-info
+          entity: binary_sensor.{APPLIANCE_ID}_usage_allowed
+
+  # ============================================
+  # SECTION 8: AI ANALYSIS
+  # ============================================
+  - title: Analyse IA
+    type: grid
+    cards:
+      - type: horizontal-stack
+        cards:
+          - type: button
+            name: Pattern
+            icon: mdi:chart-timeline-variant
+            tap_action:
+              action: call-service
+              service: smart_appliance_monitor.analyze_cycles
+              service_data:
+                entity_id: sensor.{APPLIANCE_ID}_state
+                analysis_type: pattern
+                cycle_count: 10
+
+          - type: button
+            name: Recommendations
+            icon: mdi:lightbulb-on
+            tap_action:
+              action: call-service
+              service: smart_appliance_monitor.analyze_cycles
+              service_data:
+                entity_id: sensor.{APPLIANCE_ID}_state
+                analysis_type: recommendations
+                cycle_count: 10
+
+          - type: button
+            name: Complète
+            icon: mdi:chart-box
+            tap_action:
+              action: call-service
+              service: smart_appliance_monitor.analyze_cycles
+              service_data:
+                entity_id: sensor.{APPLIANCE_ID}_state
+                analysis_type: all
+                cycle_count: 10
+
+      - type: entities
+        title: État Analyse
+        entities:
+          - entity: switch.{APPLIANCE_ID}_ai_analysis
+            name: Activer Analyse IA
+          - entity: sensor.{APPLIANCE_ID}_ai_analysis
+            name: Dernière Analyse
+            secondary_info: last-changed
+
+      - type: markdown
+        content: >
+          **Résumé:** {{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'summary') | default('Aucune analyse disponible', true) }}
+          
+          
+          **Recommandations:**
+          
+          {{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'recommendations') | default('Aucune recommandation', true) }}
+
+      - type: horizontal-stack
+        cards:
+          - type: custom:mushroom-template-card
+            primary: Économies kWh
+            secondary: "{{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'energy_savings_kwh') | default('N/A', true) }}"
+            icon: mdi:lightning-bolt
+            icon_color: green
+
+          - type: custom:mushroom-template-card
+            primary: Économies €
+            secondary: "{{ state_attr('sensor.{APPLIANCE_ID}_ai_analysis', 'energy_savings_eur') | default('N/A', true) }} €"
+            icon: mdi:currency-eur
+            icon_color: green
+
+  # ============================================
+  # SECTION 9: ANOMALY DETECTION
+  # ============================================
+  - title: Détection d'Anomalies
+    type: grid
+    cards:
+      - type: gauge
+        entity: sensor.{APPLIANCE_ID}_anomaly_score
+        name: Score d'Anomalie
+        min: 0
+        max: 100
+        needle: true
+        severity:
+          green: 0
+          yellow: 30
+          red: 60
+
+      - type: entities
+        entities:
+          - entity: binary_sensor.{APPLIANCE_ID}_anomaly_detected
+            name: Anomalie Détectée
+            icon: mdi:alert-circle
+
+      - type: custom:mini-graph-card
+        entities:
+          - entity: sensor.{APPLIANCE_ID}_anomaly_score
+            name: Score
+            color: '#e74c3c'
+        name: Historique Anomalies (7j)
+        hours_to_show: 168
+        points_per_hour: 1
+        line_width: 2
+        show:
+          labels: true
+          points: false
+          legend: true
+        icon: mdi:chart-line-variant
+
+  # ============================================
+  # SECTION 10: ALERTS
+  # ============================================
+  - title: Alertes
+    type: grid
+    cards:
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.{APPLIANCE_ID}_unplugged
+            state: 'on'
+        card:
+          type: custom:mushroom-template-card
+          primary: 🔌 Imprimante Éteinte
+          secondary: Aucune consommation détectée
+          icon: mdi:printer-3d-off
+          icon_color: red
+          tap_action:
+            action: more-info
+            entity: binary_sensor.{APPLIANCE_ID}_unplugged
+
+      # Running indicator (useful for long prints)
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.{APPLIANCE_ID}_running
+            state: 'on'
+        card:
+          type: custom:mushroom-template-card
+          primary: |
+            {% set duration = states('sensor.{APPLIANCE_ID}_cycle_duration') | int %}
+            {% set hours = (duration / 60) | round(1) %}
+            🖨️ Impression en cours ({{ hours }}h)
+          secondary: L'imprimante est en marche
+          icon: mdi:printer-3d-nozzle
+          icon_color: blue
+          tap_action:
+            action: more-info
+            entity: binary_sensor.{APPLIANCE_ID}_running
+
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.{APPLIANCE_ID}_anomaly_detected
+            state: 'on'
+        card:
+          type: custom:mushroom-template-card
+          primary: 🔍 Anomalie Détectée
+          secondary: |
+            Score: {{ states('sensor.{APPLIANCE_ID}_anomaly_score') }}
+          icon: mdi:alert-circle
+          icon_color: orange
+          tap_action:
+            action: more-info
+            entity: binary_sensor.{APPLIANCE_ID}_anomaly_detected
+
+  # ============================================
+  # SECTION 11: PRINT STATISTICS
+  # ============================================
+  - title: Statistiques d'Impression
     type: grid
     cards:
       # Last Print
       - type: entities
-        title: Last Print
+        title: Dernière Impression
         icon: mdi:history
         entities:
           - type: custom:mushroom-chips-card
@@ -193,27 +444,27 @@ sections:
       # Daily Prints
       - type: custom:mushroom-entity-card
         entity: sensor.{APPLIANCE_ID}_daily_cycles
-        name: Prints Today
+        name: Impressions Aujourd'hui
         icon: mdi:counter
         icon_color: blue
 
       # Costs
       - type: custom:mushroom-entity-card
         entity: sensor.{APPLIANCE_ID}_daily_cost
-        name: Daily Cost
+        name: Coût du Jour
         icon: mdi:currency-eur
         icon_color: green
 
       - type: custom:mushroom-entity-card
         entity: sensor.{APPLIANCE_ID}_monthly_cost
-        name: Monthly Cost
+        name: Coût Mensuel
         icon: mdi:calendar-month
         icon_color: green
 
   # ============================================
-  # SECTION 6: EFFICIENCY ANALYSIS
+  # SECTION 12: EFFICIENCY ANALYSIS
   # ============================================
-  - title: Efficiency Analysis
+  - title: Analyse d'Efficacité
     type: grid
     cards:
       # Average power during print
@@ -223,7 +474,7 @@ sections:
           {% set duration = states('sensor.{APPLIANCE_ID}_last_cycle_duration') | float(1) %}
           {% set avg_power = (energy * 1000 / duration * 60) | round(1) if duration > 0 else 0 %}
           {{ avg_power }} W
-        secondary: Average Power (last print)
+        secondary: Puissance Moyenne (dernière impression)
         icon: mdi:gauge
         icon_color: orange
 
@@ -232,45 +483,7 @@ sections:
         primary: |
           {% set energy = states('sensor.{APPLIANCE_ID}_last_cycle_energy') | float(0) %}
           {{ (energy * 1000) | round(0) }} Wh
-        secondary: Energy consumed (last print)
+        secondary: Énergie consommée (dernière impression)
         icon: mdi:lightning-bolt-circle
         icon_color: amber
-
-  # ============================================
-  # SECTION 7: ALERTS & STATUS
-  # ============================================
-  - title: Alerts
-    type: grid
-    cards:
-      - type: conditional
-        conditions:
-          - entity: binary_sensor.{APPLIANCE_ID}_unplugged
-            state: 'on'
-        card:
-          type: custom:mushroom-template-card
-          primary: 🔌 Printer Off
-          secondary: No power consumption detected
-          icon: mdi:printer-3d-off
-          icon_color: red
-          tap_action:
-            action: more-info
-            entity: binary_sensor.{APPLIANCE_ID}_unplugged
-
-      # Running indicator (useful for long prints)
-      - type: conditional
-        conditions:
-          - entity: binary_sensor.{APPLIANCE_ID}_running
-            state: 'on'
-        card:
-          type: custom:mushroom-template-card
-          primary: |
-            {% set duration = states('sensor.{APPLIANCE_ID}_cycle_duration') | int %}
-            {% set hours = (duration / 60) | round(1) %}
-            🖨️ Print in progress ({{ hours }}h)
-          secondary: Printer is currently running
-          icon: mdi:printer-3d-nozzle
-          icon_color: blue
-          tap_action:
-            action: more-info
-            entity: binary_sensor.{APPLIANCE_ID}_running
 
